# rustain-shell

./: .gitignore  Cargo.toml  README.md  install
src/: dashboard.rs  main.rs
src/models/: dashboard.rs  errorhandl.rs  execute.rs  mod.rs  parse.rs
